--- a/editor.css
+++ b/editor.css
@@ -787,11 +787,15 @@
     grid-gap: var(--theme-column-spacing); }
     .editor-styles-wrapper .wp-block-columns.alignfull {
       --theme-wrapper-side-spacing: 0; }
+    .editor-styles-wrapper .wp-block-columns:not(:first-child),
+    .editor-styles-wrapper .wp-block-columns + * {
+      --element-spacing: var(--theme-spacing-huge); }
+    .editor-styles-wrapper .wp-block-columns .editor-styles-wrapper .wp-block-columns:not(:first-child),
+    .editor-styles-wrapper .wp-block-columns .editor-styles-wrapper .wp-block-columns + * {
+      --element-spacing: var(--theme-spacing-normal); }
   .editor-styles-wrapper .wp-block-column > :not(:first-child) {
     --element-spacing: var(--theme-spacing);
     margin-top: var(--element-spacing); }
-  .editor-styles-wrapper .wp-block-columns:not(:first-child) {
-    --element-spacing: var(--theme-spacing-huge); }
   .editor-styles-wrapper .wp-block-cover {
     position: relative;
     display: flex;
